--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,11 @@
     box-sizing: border-box;
 }
 
+section {
+    padding: 60px 0;
+    text-align: center;
+}
+
 body {
     background-color: #121212; /* Ciemnoszare tło dla całej strony */
     color: #e0e0e0; /* Jasnoszary tekst */
@@ -11,9 +16,14 @@ body {
 }
 
 .container {
-    width: 90%;
     max-width: 1200px;
     margin: 0 auto;
+    padding: 0 20px;
+}
+
+h2 {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
 }
 
 header {
@@ -67,20 +77,22 @@ nav ul li a:hover {
     text-align: center;
 }
 
-.feature {
-    background-color: #2c2c2c; /* Ciemniejsze tło dla poszczególnych funkcji */
-    color: #e0e0e0; /* Jasnoszary tekst */
+.feature, .testimonial, .event {
+    background: #f9f9f9;
+    border-radius: 10px;
     padding: 20px;
-    margin: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5); /* Cień dla funkcji */
-    display: inline-block;
-    width: 30%;
+    margin: 20px 0;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+}
+.feature:hover, .testimonial:hover, .event:hover {
+    transform: translateY(-5px);
 }
 
 .feature i {
-    color: #ff5722; /* Pomarańczowy kolor ikon */
-    font-size: 2em; /* Zwiększenie rozmiaru ikon */
+    font-size: 3rem;
+    color: #4CAF50; /* Kolor ikon */
+    margin-bottom: 10px;
 }
 
 .about {
@@ -89,8 +101,8 @@ nav ul li a:hover {
 }
 
 footer {
-    background-color: #1e1e1e; /* Ciemniejsza stopka */
-    color: #e0e0e0; /* Jasnoszary tekst w stopce */
+    background-color: #333;
+    color: white;
     padding: 20px 0;
     text-align: center;
 }
@@ -135,6 +147,51 @@ footer a:hover {
 .slide-up.visible {
     opacity: 1;
     transform: translateY(0);
+}
+.contact form {
+    display: flex;
+    flex-direction: column;
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+.contact input, .contact textarea {
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.contact button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.contact button:hover {
+    background-color: #45a049;
+}
+/* Styl dla sekcji porad */
+.tips {
+    background: #f0f0f0;
+    padding: 60px 0;
+}
+
+.tip {
+    background: #fff;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 20px 0;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Styl dla nagłówków w sekcji porad */
+.tip h3 {
+    margin-bottom: 10px;
+    color: #4CAF50; /* Kolor nagłówków */
 }
 @media (max-width: 768px) {
     .feature {
